Clean object service tests